<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sick_scan_xd</name>
  <version>3.8.0</version>
  <description>ROS 1 and 2 driver for SICK scanner</description>
  <maintainer email="ros.test@lehning.de">rostest</maintainer>
  <author email="michael.lehning@lehning.de">Michael Lehning</author>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>Apache-2.0</license>
  <url type="repository">https://github.com/SICKAG/sick_scan_xd</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION != 1">ament_cmake</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION != 1">rosidl_default_generators</build_depend>

  <depend condition="$ROS_VERSION == 1">dynamic_reconfigure</depend>
  <depend condition="$BUILD_WITH_LDMRS_SUPPORT == True">libsick_ldmrs</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>
  <depend condition="$ROS_VERSION == 1">tf</depend>

  <depend condition="$ROS_VERSION != 1">rclcpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <depend condition="$ROS_VERSION != 1">rcl_interfaces</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">rviz</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">xacro</exec_depend>
  <exec_depend condition="$ROS_VERSION != 1">rosidl_default_runtime</exec_depend>
  <test_depend condition="$ROS_VERSION != 1">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION != 1">ament_lint_common</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION != 1">ament_cmake</build_type>
  </export>

  <member_of_group condition="$ROS_VERSION != 1">rosidl_interface_packages</member_of_group>
</package>

