<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sick_scan_ros2_example</name>
  <version>1.0.0</version>
  <description>Tiny ROS-2 example how to use sick_scan_xd messages and services in a ROS-2 application</description>
  <maintainer email="ros.test@lehning.de">rostest</maintainer>
  <author email="michael.lehning@lehning.de">Michael Lehning</author>

  <license>Apache License, Version 2.0, see "http://www.apache.org/licenses/LICENSE-2.0"</license>
  <url type="repository">https://github.com/SICKAG/sick_scan_xd</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rcl_interfaces</depend>
  
  <depend>sick_scan</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
